# instagram-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README-FORK.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml  release-mcpb.yml  version-watchdog.yml
docs/: build_demo.py
mcpb/: manifest.json
plugins/instagram-social/: .mcp.json
plugins/instagram-social/.claude-plugin/: plugin.json
plugins/instagram-social/hooks/: hooks.json
plugins/instagram-social/scripts/: run-server.sh  welcome.sh
plugins/instagram-social/skills/connect-accounts/: SKILL.md
plugins/instagram-social/skills/connect-meta-account/: SKILL.md
scripts/: check_graph_version.py
src/instagram_mcp/: graph.py  server.py
src/instagram_mcp/scripts/: get_token.py  rebuild_accounts.py
tests/: conftest.py  test_server.py
top5magnesium-clone/: index.html  styles.css
