[project]
name = "instagram-mcp"
version = "0.1.1"
description = "Multi-account Instagram + Facebook Pages MCP server (Graph API), with a plugin and guided onboarding."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Syed Aleem" },
    { name = "Claudia Chez" },
]
keywords = ["mcp", "instagram", "graph-api", "claude", "anthropic", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/claudiachez/instagram-mcp"
Repository = "https://github.com/claudiachez/instagram-mcp"
Issues = "https://github.com/claudiachez/instagram-mcp/issues"
Changelog = "https://github.com/claudiachez/instagram-mcp/blob/main/CHANGELOG.md"

[project.scripts]
instagram-mcp = "instagram_mcp.__main__:main"
instagram-mcp-get-token = "instagram_mcp.scripts.get_token:main"
instagram-mcp-rebuild-accounts = "instagram_mcp.scripts.rebuild_accounts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
